Updated IE7 specific css file for layout issues in the setup wizard.  Also made some minor changes to html output on the complete page.
KTC-838. UI issue on the 'Complete' page of the Setup Wizard

In Progress

Committed by: Paul Barrett

Reviewed by: Jarrett Jordaan

--- a/setup/wizard/resources/css/ie7.css
+++ b/setup/wizard/resources/css/ie7.css
@@ -17,5 +17,11 @@
 .dependencies {
 	position:static;
 	right:30%;
-	width:640px;
+	width:650px;
+}
+
+.description_complete {
+	position:static;
+	right:35%;
+	width:100%;
 }
